--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,12 +1,14 @@
-description "Gunicorn application server running AirBnB_clone_v4"
+[Unit]
+Description=Gunicorn instance to serve AirBnB Project
+After=network.target
+After=syslog.target
 
+[Service]
+User=ubuntu
+Group=www-data
+WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
+ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log
+Restart=on-failure
 
-start on runlevel [2345]
-stop on runlevel [!2345]
-
-respawn
-setuid ubuntu
-setgid www-data
-
-chdir /home/ubuntu/AirBnB_clone_v4
-exec gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app >> /tmp/airbnb-access.log 2> /tmp/airbnb-error.logirbnb-access.log
+[Install]
+WantedBy=multi-user.target
